@@ -5,7 +5,7 @@ AC_CANONICAL_SYSTEM
 AC_EXEEXT
 
 PACKAGE=mbuffer
-VERSION=20121111
+VERSION=20130209
 
 if test "${LD_LIBRARY_PATH}" != "" ; then
 	echo ""
@@ -110,17 +110,17 @@ AC_ARG_ENABLE(md5,
         [  --disable-md5           disable md5 hash generation],
 	,enable_md5=auto
 	)
-if test x$enable_md5 != xno ; then
-	AC_SEARCH_LIBS(mhash_init,mhash,AC_DEFINE_UNQUOTED(HAVE_LIBMHASH),
-	AC_SEARCH_LIBS(MD5Init,md5,AC_DEFINE_UNQUOTED(HAVE_LIBMD5),
-	AC_SEARCH_LIBS(MD5_Init,crypto,AC_DEFINE_UNQUOTED(HAVE_LIBCRYPTO),
-		if test x$enable_md5 = xauto ; then
-			AC_MSG_WARN(could not find a library containing the md5 hash functions - md5 support disabled)
-		else
-			AC_MSG_ERROR(could not find the mhash library)
-		fi
-	)))
-fi
+#if test x$enable_md5 != xno ; then
+#	AC_SEARCH_LIBS(mhash_init,mhash,AC_DEFINE_UNQUOTED(HAVE_LIBMHASH),
+#	AC_SEARCH_LIBS(MD5Init,md5,AC_DEFINE_UNQUOTED(HAVE_LIBMD5),
+#	AC_SEARCH_LIBS(MD5_Init,crypto,AC_DEFINE_UNQUOTED(HAVE_LIBCRYPTO),
+#		if test x$enable_md5 = xauto ; then
+#			AC_MSG_WARN(could not find a library containing the md5 hash functions - md5 support disabled)
+#		else
+#			AC_MSG_ERROR(could not find the mhash library)
+#		fi
+#	)))
+#fi
 
 AC_SUBST(DEBUG)
 AC_DEFINE_UNQUOTED(PACKAGE,"${PACKAGE}")
